# airbnb-clone-backend

./: README.md  pyproject.toml
bookings/: models.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: admin.py  models.py  serializers.py  views.py
categories/migrations/: 0001_initial.py
common/: models.py
config/: settings.py  urls.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
experiences/: models.py
experiences/migrations/: 0001_initial.py  0002_experience_category.py  0003_alter_experience_category_alter_experience_host_and_more.py
medias/: models.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py
reviews/: admin.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_rename_citry_room_city_alter_room_description.py  0003_alter_amenity_options_room_name.py  0004_room_category.py  0005_alter_room_amenities_alter_room_category_and_more.py
rooms/templates/: all_rooms.html  room_detail.html
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py
wishlists/: admin.py
wishlists/migrations/: 0001_initial.py  0002_alter_wishlist_experiences_alter_wishlist_rooms.py  0003_alter_wishlist_experiences_alter_wishlist_rooms_and_more.py
